# gnu-apl

./: .apl.history  .gitignore  CMAKE.md  CMakeLists.txt  Makefile  Makefile.in  TODO  aclocal.m4  config.h  config.h.cmake.in  config.h.in  config.status  configure  exported_from  libtool  ud.txt
Claude/: Makefile.in
HOWTOs/: GNU-APL-Designers-Guide.asciidoc  GNU-APL-Designers-Guide.html  Makefile  Makefile.am  Makefile.in  Tips-For-Mainatiners.html
apl-1.8/: Makefile  config.h
apl-1.8/HOWTOs/: Makefile.in
cmake/: AplChecks.cmake  AplConfigSummary.cmake  AplHost.cmake  AplOptions.cmake
debian/: Makefile  Makefile.in
debian/source/: Makefile  Makefile.in
debian_tmp/: apl_1.8-1.dsc  apl_1.8-1_amd64.buildinfo  apl_1.8-1_amd64.changes  apl_1.8-1_amd64.deb
debian_tmp/apl-1.8/: Makefile  Makefile.in  config.h  config.status  libtool
doc/: Makefile  Makefile.in  apl.html.mine  apl.info.mine  apl.texi  libapl.html  libapl.info
doc/DALY/: Makefile  Makefile.in
erlang/: Makefile  Makefile.in
ftp-upload/: apl_1.8-1.debian.tar.xz
gnu-apl.d/: Makefile  Makefile.in
m4/: apl_TARGETs.m4  apl_sugar.m4  check_GTK.m4  check_PCRE.m4  check_POSTGRES.m4  check_SQLITE.m4  check_X11.m4
rpm/: Makefile  Makefile.in
src/: APL_types.hh  Archive.cc  Archive.hh  Avec.cc  Backtrace.cc  Bif_F12_DOMINO.cc  Bif_F12_FORMAT.cc  Bif_F12_PARTITION_PICK.cc  Bif_F12_SORT.cc  Bif_OPER1_EACH.cc  Bif_OPER1_SCAN.cc  Bif_OPER2_POWER.cc  CDR_string.hh  CMakeLists.txt  Cell.cc  Cmd_IN.cc  Cmd_KEYB.cc  Cmd_LIB.cc  Command.cc  Common.cc  Common.hh  ConstCell_P.hh  DerivedFunction.hh  Doxy.cc  Doxy.hh  Error.cc  Executable.cc  Executable.hh  Focus.icc  Function.cc  Function.hh  Heapsort.hh  IO_Files.cc  IO_Files.hh  Id.cc  IndexExpr.cc  IndexIterator.cc  IndexIterator.hh  InputFile.cc  InputFile.hh  (+90 more)
src/.deps/: AP100-Backtrace.Po  AP100-Svar_DB.Po  AP100-Svar_record.Po  AP210-Backtrace.Po  AP210-Svar_DB.Po  AP210-Svar_record.Po  APserver-Svar_record.Po  apl-Archive.Po  apl-Assert.Po  apl-Avec.Po  apl-Backtrace.Po  apl-Bif_F12_COMMA.Po  apl-Bif_F12_DOMINO.Po  apl-Bif_F12_FORMAT.Po  apl-Bif_F12_INDEX_OF.Po  apl-Bif_F12_INTERVAL_INDEX.Po  apl-Bif_F12_PARTITION_PICK.Po  apl-Bif_F12_SORT.Po  apl-Bif_F12_TAKE_DROP.Po  apl-Bif_OPER1_COMMUTE.Po  apl-Bif_OPER1_EACH.Po  apl-Bif_OPER1_REDUCE.Po  apl-Bif_OPER1_SCAN.Po  apl-Bif_OPER2_INNER.Po  apl-Bif_OPER2_OUTER.Po  apl-Bif_OPER2_POWER.Po  apl-Bif_OPER2_RANK.Po  apl-CDR.Po  apl-Cell.Po  apl-CharCell.Po  apl-Command.Po  apl-Common.Po  apl-ComplexCell.Po  apl-DerivedFunction.Po  apl-DiffOut.Po  apl-Doxy.Po  apl-DynamicObject.Po  apl-Error.Po  apl-Executable.Po  apl-FloatCell.Po  (+77 more)
src/APs/: AP100  AP100.cc  AP210  AP210.cc  APmain.cc  APserver  APserver.cc  CMakeLists.txt  Makefile  Makefile.in  Svar_DB_server.cc
src/APs/.deps/: AP100-AP100.Po  AP100-APmain.Po  AP210-AP210.Po  AP210-APmain.Po  APserver-APserver.Po  APserver-Svar_DB_server.Po
src/Gtk/: Gtk_enum_map.def  Gtk_events2.asciidoc  Gtk_server  Gtk_server.cc  Makefile  Makefile.in
src/Gtk/.deps/: Gtk_server.Po
src/emacs_mode/: FnCommand.cc  FnTagCommand.cc  FollowCommand.cc  GetVarCommand.cc  Makefile  Makefile.in  NetworkConnection.cc  SendCommand.cc  TcpListener.cc  TraceData.cc  UnixSocketListener.cc  emacs.cc  network.cc
src/emacs_mode/.deps/: DefCommand.Plo  FnCommand.Plo  FnTagCommand.Plo  FollowCommand.Plo  GetVarCommand.Plo  HelpCommand.Plo  Listener.Plo  LockWrapper.Plo  NetworkConnection.Plo  RunCommand.Plo  SendCommand.Plo  SiCommand.Plo  SicCommand.Plo  SystemFnCommand.Plo  SystemVariableCommand.Plo  TcpListener.Plo  TempFileWrapper.Plo  TraceData.Plo  UnixSocketListener.Plo  VariablesCommand.Plo  VersionCommand.Plo  emacs.Plo  network.Plo  util.Plo
src/native/: Makefile  Makefile.in  file_io.cc  template.hh
src/native/.deps/: lib_file_io_la-file_io.Plo  lib_template_F0_la-template_F0.Plo  lib_template_F12_la-template_F12.Plo  lib_template_OP1_la-template_OP1.Plo  lib_template_OP2_la-template_OP2.Plo
src/sql/: Makefile  Makefile.in  PostgresArgListBuilder.cc  PostgresArgListBuilder.hh  PostgresProvider.cc  SqliteArgListBuilder.cc  SqliteConnection.cc  apl-sqlite.cc
src/sql/.deps/: Connection.Plo  PostgresArgListBuilder.Plo  PostgresConnection.Plo  PostgresProvider.Plo  SqliteArgListBuilder.Plo  SqliteConnection.Plo  SqliteProvider.Plo  SqliteResultValue.Plo  apl-Connection.Po  apl-PostgresArgListBuilder.Po  apl-PostgresConnection.Po  apl-PostgresProvider.Po  apl-SqliteArgListBuilder.Po  apl-SqliteConnection.Po  apl-SqliteProvider.Po  apl-SqliteResultValue.Po  apl-sqlite.Plo
src/testcases/: .apl.history  APnnn_1011.sh.in  APnnn_1011.tc2.in  IfElse.tc  Makefile  Makefile.am  Makefile.in  Quad_PLOT.tc  Quad_PNG.tc  Quad_SQL_postgres.tc  Quad_SQL_sqlite.tc  ZZ57_Regression.tc
src/workspaces/: Makefile  Makefile.in
support-files/: Makefile  Makefile.in
support-files/105-key-International-Keyboard/: Makefile  Makefile.in
support-files/Bill_Daly_Ubuntu/: Makefile  Makefile.in
support-files/Dirk/: Makefile  Makefile.in
support-files/Dyalog-Keyboard/: Makefile  Makefile.in
support-files/Juergen-Mint-19/: Makefile  Makefile.in
support-files/Juergen-Mint-21/: Makefile  Makefile.in  xmodmap.apl
support-files/OS-X-Keyboard/: Makefile  Makefile.in
support-files/Unicomp-Keyboard/: Makefile  Makefile.in
support-files/WASD-Keyboard/: Makefile  Makefile.in
support-files/old-Keyboard/: Makefile  Makefile.in
tools/: APL_keyboard  APL_keyboard.cc  APL_keyboard_learn  APL_keyboard_learn.cc  APL_keyboard_show  APL_keyboard_show.cc  Makefile  Makefile.in  TLV_server  apl2html  apl2html.cc  check_command_def.cc  filter_apl_lines.cc  filter_apl_lines2.cc  ncurses_emul  phrase_gen  sockconst
tools/.deps/: APL_keyboard_show.Po  phrase_gen.Po
ts/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  config.h
ts/src/: CTestTestfile.cmake  Makefile
ts/testcases/: APnnn_1011.sh
websock/: Makefile  Makefile.in
websock/client/: Makefile  (+1 more)
workspaces/: Makefile  Makefile.in
wslib3/: Makefile  Makefile.in
wslib4/: Makefile  Makefile.in
wslib5/: Makefile  Makefile.in
(+80 files in other folders)
